--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -24,4 +24,12 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         android:layout_gravity="center"/>
+
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:id="@+id/progressBar"
+        android:visibility="invisible"
+        />
 </LinearLayout>
